--- a/pom.xml
+++ b/pom.xml
@@ -1238,7 +1238,8 @@
         <jacoco.agent.version>0.7.5.201505241946</jacoco.agent.version>
         <project.scm.id>my-scm-server</project.scm.id>
         <carbon.business-process.version>4.4.4</carbon.business-process.version>
-        <carbon.analytics-common.version>1.0.0</carbon.analytics-common.version>
+        <carbon.analytics-common.version>5.0.9</carbon.analytics-common.version>
+        <carbon.analytics.common.version>1.0.0</carbon.analytics.common.version>
         <osgi.framework.imp.pkg.version.range>[1.7.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
         <org.apache.tomcat.wso2.version>7.0.52.wso2v5</org.apache.tomcat.wso2.version>
