--- a/modules/samples/sts/sts-client/pom.xml
+++ b/modules/samples/sts/sts-client/pom.xml
@@ -31,7 +31,7 @@
             <artifactId>axis2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.neethi.wso2</groupId>
+            <groupId>org.wso2.orbit.org.apache.neethi</groupId>
             <artifactId>neethi</artifactId>
         </dependency>
         <dependency>
