--- a/pom.xml
+++ b/pom.xml
@@ -1074,6 +1074,21 @@
                 <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
                 <version>${carbon.identity.version}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ws.commons.schema.wso2</groupId>
+                <artifactId>XmlSchema</artifactId>
+                <version>${XmlSchema.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>wsdl4j.wso2</groupId>
+                <artifactId>wsdl4j</artifactId>
+                <version>${wsdl4j.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -1245,6 +1260,9 @@
         <xmltooling.version>1.3.1</xmltooling.version>
         <carbon.metrics.version>1.1.1</carbon.metrics.version>
         <xercesImpl.version>2.8.1</xercesImpl.version>
+        <commons.codec.version>1.8</commons.codec.version>
+        <XmlSchema.version>1.4.7.wso2v3</XmlSchema.version>
+        <wsdl4j.version>1.6.2.wso2v2</wsdl4j.version>
     </properties>
 
     <repositories>
